changes made to package.json and jsonResponses.js. Added a missing character in an id and attempting to fix yarn issue.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "http-api-assignment-ii",
   "version": "1.0.0",
+    "engines": {
+        "node": "10.16.0",
+    }
   "description": "",
   "main": "./src/server.js",
   "scripts": {
