--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "http-api-assignment-ii",
   "version": "1.0.0",
     "engines": {
-        "node": "10.16.0",
+        "node": "13.6.0",
+        "npm": "6.13.4"
     }
   "description": "",
   "main": "./src/server.js",
